change file directory structure; fix bugs in routing jump

--- a/blog-front/src/theme/theme.css
+++ b/blog-front/src/theme/theme.css
@@ -1,6 +1,6 @@
 .light-blue {
-  --background-color: #C1D5DC;
-  --sub-background-color: #FFF;
+  --background-color: #c1d5dc;
+  --sub-background-color: #fff;
   --text-color: #363636;
   --sub-text-color: #535360;
   --link-color: #48606d;
@@ -10,6 +10,7 @@
   --menu-select-color: #f0f9fd;
   --success-color: #80d284;
   --info-color: #d3d3d3;
+  --hover-color: #e4e4e4;
 }
 
 .night {
@@ -24,4 +25,5 @@
   --menu-select-color: #4d4d4d;
   --success-color: #388e3c;
   --info-color: #b4b4b4;
+  --hover-color: #3d3d3d;
 }
